# flight_composer

./: .gitignore  .gitmodules  AGENT.md  README.md  pixi.toml  pyproject.toml  pytest.ini  tasks.py
IGCData/: 07_niskie_ladowanie.igc  08_krazenie_nad_blokami.igc
config/flights/: 07_niskie_ladowanie.yaml
config/global/: airfields.yaml  gliders.yaml  settings.yaml
config/sequences/: Seq_EPBC_Overhead_Intro.yaml
docs/: ACTOR.md  DATA_PROCESSING_PIPELINE.md  OVERLAY.md  OVERVIEW.md
docs/videos/: NISKO_NAD_BLOKAMI.md
src/flight_composer/: config.py  flight_data.py  flight_file.py  flight_track.py  flight_trajectory.py  kinematic_spline.py  load_flight_data.py  logger.py  overlay_text.py  phase_subtitles.py  processor.py  projection.py  utils.py
src/flight_composer/overlay/: __init__.py  altitude.py  overlay.py  overview.py  preprocessing.py  speed.py  speedup.py
src/flight_composer/processing/: assign_flight_phases.py  extract_gopro_data.py  extract_igc_data.py  extract_mp4_streams.py  find_data_sources.py  fix_altitude_drift.py  flight_data_sources.py  raw_data_sanitization.py
src/flight_composer/scripts/: __init__.py  dump_gopro_telemetry.py  export_flight_csv_scaled.py  export_flight_json.py  export_trajectory_wgs84.py  extract_gopro_telemetry.py  flight_to_geojson.py  generate_actor_data.py  generate_phase_subtitles.py  igc_to_geojson.py  normalize_telemetry.py  (+4 more)
tests/: test_extract_telemetry_csv.py  test_flight_07_integration.py  test_ingestion_integration.py  test_sanitize_igc_telemetry.py  test_trajectory_data_structures.py  test_validation.py
(+15 files in other folders)
